# viewflow

./: .gitignore  Airflow1.10.Dockerfile  Airflow1.10.docker-compose.yml  Airflow2.Dockerfile  Airflow2.docker-compose.yml  CONTRIBUTION.md  Dockerfile  Dockerfile-airflow1.10  Dockerfile-airflow2  LICENSE.md  MAINTAINERS.md  README.md  docker-compose-airflow1.10.yml  docker-compose-airflow2.yml  docker-compose-test.yml  pyproject.toml  requirements.txt
Airflow@1.10/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Airflow@1.10/.circleci/: config.yml
Airflow@2/: pyproject.toml  requirements.txt
Airflow@2/.circleci/: config.yml
demo/: .env
demo/dags/: views.py
demo/dags/viewflow-demo-1/: config.yml  course_enriched.sql  top_3_user_xp.py  user_xp.sql
demo/dags/viewflow-demo-2/: emails_blog.sql  emails_blog.yml  user_enriched.sql
demo/dags/viewflow-demo-3/: config.yml  user_xp2.R  user_xp_duplicate.R
demo/dags/viewflow-demo-4/: top_3_user_xp_duplicate.Rmd
demo/scripts/: load_postgres.sql  local-entrypoint-scheduler.sh  local-entrypoint-webserver.sh
tests/: test_callbacks.py  test_dag1_simple.py  test_external_dependencies.py  test_get_dependencies.py
tests/adapters/: test_postgres_adapter.py  test_postgres_incremental.py  test_r_adapter.py  test_rmd_adapter.py
tests/fixtures/: load_postgres.sql
tests/parsers/: test_parse_python.py  test_parse_r.py  test_parse_rmd.py  test_parse_sql.py
tests/projects/dag1_simple/: task_2.yml
viewflow/: __init__.py  create_dag.py  task_callbacks.py
viewflow/adapters/: post_execute_monkey_patch.py
viewflow/operators/: incremental_postgres_operator.py  python_to_postgres_operator.py  r_operator.py  rmd_operator.py  template_incremental.sql
viewflow/parsers/: dependencies.py  dependencies_custom_pattern.py  dependencies_patterns.py  dependencies_r_patterns.py  parse_python.py  parse_r.py  parse_rmd.py  parse_sql.py  parse_yml.py
(+33 files in other folders)
